[package]
name = "millennium-cli"
description = "Command line interface for building Millennium apps"
version = "1.0.0-beta.3"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/pykeio/millennium"
homepage = "https://millennium.pyke.io/"
authors = [ "pykeio", "Tauri Programme within The Commons Conservancy" ]
categories = [ "gui", "web-programming" ]
rust-version = "1.57"
edition = "2021"
include = [
	"src/",
	"/templates",
	"scripts/",
	"*.json",
	"*.rs",
	"millennium.gitignore",
	"millennium-dev-watcher.gitignore"
]

[[bin]]
name = "cargo-millennium"
path = "src/main.rs"

[dependencies]
clap = { version = "3.1", features = [ "derive" ] }
anyhow = "1.0"
millennium-bundler = { version = "1.0.0-beta.3", path = "../millennium-bundler" }
colored = "2.0"
once_cell = "1.10"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.13"
notify = "4.0"
shared_child = "1.0"
toml_edit = "0.13"
json-patch = "0.2"
millennium-utils = { version = "1.0.0-beta.3", path = "../../src/millennium-utils", features = [ "isolation", "schema" ] }
toml = "0.5"
valico = "3.6"
handlebars = "4.2"
include_dir = "0.7"
minisign = "0.7"
base64 = "0.13.0"
ureq = "2.4"
os_info = "3.3"
semver = "1.0"
regex = "1.5.5"
lazy_static = "1"
terminal_size = "0.1"
unicode-width = "0.1"
tempfile = "3"
zeroize = "1.5"
glob = "0.3"
heck = "0.4"
url = { version = "2.2", features = [ "serde" ] }
os_pipe = "1"
ignore = "0.4"
ctrlc = "3.2"
inquire = "0.2"
phf = { version = "0.10", features = ["macros"] }
log = { version = "0.4.17", features = [ "kv_unstable", "kv_unstable_std" ] }
env_logger = "0.9.0"

[target."cfg(windows)".dependencies]
encode_unicode = "0.3"
winapi = { version = "0.3", features = [ "handleapi", "processenv", "winbase", "wincon", "winnt" ] }

[target."cfg(unix)".dependencies]
libc = "0.2"

[build-dependencies]
millennium-utils = { version = "1.0.0-beta.3", path = "../../src/millennium-utils", features = [ "schema", "isolation" ] }
schemars = { version = "0.8", features = [ "url" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
serde_with = "1.13"
url = { version = "2.2", features = [ "serde" ] }

[target."cfg(target_os = \"linux\")".build-dependencies]
heck = "0.4"
